Compile error: 'bool std::isinf(float)' is not 'constexpr' with GCC 4.6 in C++11 mode https://bugs.webkit.org/show_bug.cgi?id=88721

Reviewed by Csaba Osztrogonác.

Don't define these as consexpr because with gcc 4.6
they call non constexpr functions.
* wtf/MathExtras.h:
(std::wtf_isinf):
(std::wtf_isnan):

Canonical link: https://commits.webkit.org/107512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120922 268f45cc-cd09-0410-ab3c-d52691b4dbfc